# ChainChess

./: .dockerignore  .gitignore  BUILD_AND_RUN.sh  Cargo.toml  DOCKER_GUIDE.md  Dockerfile  QUICK_START.md  README.md  compose.yaml  package-lock.json  run.bash
apps/chainchess/: Cargo.toml
apps/chainchess/src/: contract.rs  lib.rs  service.rs  state.rs
chainchess-web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
chainchess-web/src/: App.css  App.tsx  index.css  vite-env.d.ts
chainchess-web/src/components/: SoundManager.ts
chainchess-web/src/lib/: ai.ts  api.ts  types.ts
